lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_substr_replace/buffer_substr_replace7/buffer_substr_replace7.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_substr_replace/buffer_substr_replace7/buffer_substr_replace7.c:30:27: warning: implicit declaration of function 'chunk_buffer_acquire' is invalid in C99 [-Wimplicit-function-declaration]
    buffer * s__replace = chunk_buffer_acquire();
                          ^
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_substr_replace/buffer_substr_replace7/buffer_substr_replace7.c:30:14: warning: incompatible integer to pointer conversion initializing 'buffer *' with an expression of type 'int' [-Wint-conversion]
    buffer * s__replace = chunk_buffer_acquire();
             ^            ~~~~~~~~~~~~~~~~~~~~~~
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_substr_replace/buffer_substr_replace7/buffer_substr_replace7.c:32:27: error: use of undeclared identifier 's__b'
    buffer_substr_replace(s__b ,q_b__offset ,q_b__len ,s__replace );
                          ^
2 warnings and 1 error generated.
